# KS-Signal-at-LHC

./: README.md
KS Signal /: README.md
KS Signal /Displaced Geometry/: README.md  generate_KS_DV.mg5  generate_KS_chained.mg5  run_KS_DV.sh  run_KS_delphes.sh
KS Signal /Displaced Geometry/ATLFAST3_Pipeline/: README.md  define_KS.py  mc.MGPy8EG_KS_WR_HNL_3000_500.py  todo
KS Signal /Displaced Geometry/LLP_analysis/: README.md
KS Signal /Displaced Geometry/Manual_HEPMC3/: README.md  generate_KSDV.mg5  lhe2hepmc3.cc  run_HNLDV.sh  scan_HNLDV.cc  test_hepmc3.sh
KS Signal /Displaced Geometry/Manual_LLP_analysis/: HNL_boost.C  README.md  plot_boosted_decaylength.C  plot_nominal_decaylength.C
KS Signal /Displaced Geometry/Pythia+Delphes/: KSDV_geometry.C  README.md  run_KS_delphes.sh
KS Signal /Displaced Geometry/Reconstructed_Displacement_Analysis/: README.md  SIG_vs_BKG_scanDV_testSV.py  dump_DAOD_HNL_DV.py  dump_RecLLP.py  (+2 more)
KS Signal /Miscellaneous/: PMNS_calculator.C  README.md  scan_MNMWR.py
KS Signal /Prompt Signal/: KS_ApplyKinematicCuts.C  README.md  generate_HNL_decay.mg5  generate_KS.txt  generate_KSDY.mg5  generate_KS_scan.mg5  read_HNL_decay_CS.C  read_KS_CS_mWRmNS.C  read_KS_events_scan.C  run_HNL_decay.sh  run_KS_reweight.sh  run_KS_scan_PRL.sh  run_KS_scan_SEQ.sh
KS Signal /Pythia/: run_HNL_pythia_decay.sh
SIGvsBKG/: README.md  SIGvsBKG_data22.C  SIGvsBKG_reco22.C  SIGvsBKG_recoDV.py  SIGvsBKG_sgn22.C  metadataLLP1_backgrounds.json  multiplicitiy_scan.py  old_SIGvsBKG_evt22.C
SIGvsBKG/METADATA/: CMakeLists.txt  README.md  ReadMetaData.cxx
(+4 files in other folders)
